fix layout issues

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -8,6 +8,7 @@
     
 }
 .footer {
+    z-index:3;
     display: flex;
     align-items: center;
     justify-content: center; /* statt justify-content: space-between; */
